# aom-react-flask

./: Dockerfile  README.md  build_docker.sh  deploy_docker.sh
api/: .env  .env.example  .gitignore  aom_app.py  app.py  app_factory.py  pyproject.toml  reformat.sh
api/configs/: __init__.py  app_config.py
api/configs/basic/: __init__.py
api/configs/middleware/: __init__.py
api/controllers/console/: __init__.py  account.py  errors.py
api/docker/: entrypoint.sh  middleware.compose.yaml
api/extensions/: ext_blueprints.py  ext_commands.py  ext_mongodb.py
api/libs/: external_api.py
api/models/: account.py  engine.py  order.py
api/services/: account_service.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: main.jsx  routers.jsx
client/src/api/: axios.js  order.js  people.js
client/src/components/: AlertManager.jsx  AppBar.jsx
client/src/contexts/: orderContext.jsx
client/src/css/: themes.js
client/src/utils/: orderUtils.js
client/src/views/CreatePage/: BillDetailTab.jsx  BillTypeTab.jsx  CandidateTab.jsx  PayerTab.jsx  index.jsx
client/src/views/HomePage/: index.jsx
client/src/views/PeoplePage/: index.jsx
